Code-cleanup: Don't create new primitive wrapper instances explicitly but switch to valueOf() and parseX().
Signed-off-by: Gunnar Brand <gunnar.brand@interface-projects.de>