@@ -180,32 +180,32 @@ public class ResolutionBox extends Box {
         setDefaultAttributes(node);
 
         IIOMetadataNode child = new IIOMetadataNode("VerticalResolutionNumerator");
-        child.setUserObject(new Short(numV));
+        child.setUserObject(Short.valueOf(numV));
 	child.setNodeValue("" + numV);
         node.appendChild(child);
 
         child = new IIOMetadataNode("VerticalResolutionDenominator");
-        child.setUserObject(new Short(denomV));
+        child.setUserObject(Short.valueOf(denomV));
 	child.setNodeValue("" + denomV);
         node.appendChild(child);
 
         child = new IIOMetadataNode("HorizontalResolutionNumerator");
-        child.setUserObject(new Short(numH));
+        child.setUserObject(Short.valueOf(numH));
 	child.setNodeValue("" + numH);
         node.appendChild(child);
 
         child = new IIOMetadataNode("HorizontalResolutionDenominator");
-        child.setUserObject(new Short(denomH));
+        child.setUserObject(Short.valueOf(denomH));
 	child.setNodeValue("" + denomH);
         node.appendChild(child);
 
         child = new IIOMetadataNode("VerticalResolutionExponent");
-        child.setUserObject(new Byte(expV));
+        child.setUserObject(Byte.valueOf(expV));
 	child.setNodeValue("" + expV);
         node.appendChild(child);
 
         child = new IIOMetadataNode("HorizontalResolutionExponent");
-        child.setUserObject(new Byte(expH));
+        child.setUserObject(Byte.valueOf(expH));
 	child.setNodeValue("" + expH);
         node.appendChild(child);
 
